Adjust position of smaller upgrade banner upwards a little to avoid overlapping the donut

--- a/app/scss/partials/_summary.scss
+++ b/app/scss/partials/_summary.scss
@@ -207,4 +207,7 @@
 		left: 0;
 		top: 10px;
 	}
+	&.expert .green-upgrade-banner {
+		top: 7px;
+	}
 }
